# MeWeX

./: .gitignore  README.md
mwextractor/mwextractor/: CMakeLists.txt  main.cpp
mwextractor/mwextractor/CMakeScripts/: FindANTLR.cmake  FindCorpus2.cmake
mwextractor/mwextractor/exception/: Exception.cpp  Exception.h
mwextractor/mwextractor/function/: Creators.cpp  Creators.h  Function.cpp  Function.h  FunctionFactory.cpp  FunctionFactory.h
mwextractor/mwextractor/function/aggregation/: AggregationFunction.cpp  AggregationFunction.h  MaxMultiplier.cpp  MaxMultiplier.h  MaxSum.cpp  MaxSum.h
mwextractor/mwextractor/function/association/: AbstractOrderAssociationFunction.cpp  AbstractOrderAssociationFunction.h  AbstractRanker.cpp  AbstractRanker.h  AssociationFunction.cpp  AssociationFunction.h  AssociationFunctionBased.cpp  AssociationFunctionBased.h  AssociationMeasure.cpp  AssociationMeasure.h  AverageBigram.cpp  AverageBigram.h  ConsonniT1.cpp  ConsonniT1.h  ConsonniT2.cpp  ConsonniT2.h  CrossValidator.cpp  CrossValidator.h  Cvalue.cpp  Cvalue.h  Dice.cpp  Dice.h  ExpectedFrequency.cpp  ExpectedFrequency.h  Extractor.cpp  Extractor.h  FairDispersionPointNormalization.cpp  FairDispersionPointNormalization.h  Frequency.cpp  Frequency.h  InversedExpectedFrequency.cpp  InversedExpectedFrequency.h  Jaccard.cpp  Jaccard.h  LogLikelihood.cpp  LogLikelihood.h  MinimalBigram.cpp  MinimalBigram.h  MutualExpectation.cpp  MutualExpectation.h  (+38 more)
mwextractor/mwextractor/function/dispersion/: Disperser.cpp  Disperser.h  DispersionData.cpp  DispersionData.h  DispersionFunction.cpp  DispersionFunction.h  DistributionalConsistency.cpp  DistributionalConsistency.h  JuillandD.cpp  JuillandD.h  LynesD3.cpp  LynesD3.h  StandardDeviation.cpp  StandardDeviation.h  TermFrequencyInverseDocumentFrequency.cpp  TermFrequencyInverseDocumentFrequency.h  VariationCoefficient.cpp  VariationCoefficient.h
mwextractor/mwextractor/function/filter/: And.cpp  And.h  CorporaFrequency.cpp  CorporaFrequency.h  EveryWord.cpp  EveryWord.h  FeatureFilter.cpp  FeatureFilter.h  Filter.cpp  Filter.h  FilterChain.cpp  FilterChain.h  Filtrator.cpp  Filtrator.h  Frequency.cpp  Frequency.h  Not.cpp  Not.h  Or.cpp  Or.h  Relation.cpp  Relation.h  Tuple.cpp  Tuple.h  Xor.cpp  Xor.h
mwextractor/mwextractor/function/quality/: AveragePrecision.cpp  AveragePrecision.h  AveragePrecisionOnHit.cpp  AveragePrecisionOnHit.h  AveragePrecisionRecallCurve.cpp  AveragePrecisionRecallCurve.h  ConfusionMatrixCreator.cpp  ConfusionMatrixCreator.h  FMeasure.cpp  FMeasure.h  Hit.cpp  Hit.h  MeanAveragePrecision.cpp  MeanAveragePrecision.h  PrecisionCurve.cpp  PrecisionCurve.h  PrecisionRecallCurve.cpp  PrecisionRecallCurve.h  QualityFunction.cpp  QualityFunction.h  QualityMatrix.cpp  QualityMatrix.h  RecallBasedQualityFunction.cpp  RecallBasedQualityFunction.h  RecallCurve.cpp  RecallCurve.h
mwextractor/mwextractor/function/score/: BordaScore.cpp  BordaScore.h  Centering.cpp  Centering.h  Normalization.cpp  Normalization.h  ScoreFunction.cpp  ScoreFunction.h  ScoreFunctionChain.cpp  ScoreFunctionChain.h  Standarization.cpp  Standarization.h  ZipfsBordaScore.cpp  ZipfsBordaScore.h
mwextractor/mwextractor/machine_learning/: Classifier.cpp  Classifier.h  FoldsBuilder.h  OptimizationFunction.cpp  OptimizationFunction.h
mwextractor/mwextractor/machine_learning/heuristic_optimization/: BaseCallPoliciesArguments.cpp  BaseCallPoliciesArguments.h  BaseEvaluationPerformance.h  BaseParameter.h  BaseReport.cpp  BaseReport.h  Data.cpp  Data.h  DoubleEvaluationPerformance.cpp  DoubleEvaluationPerformance.h  DoubleParameter.cpp  DoubleParameter.h  EvaluationPerformanceFactory.cpp  EvaluationPerformanceFactory.h  Evaluator.cpp  Evaluator.h  EvaluatorWrapper.cpp  EvaluatorWrapper.h  HypersphereNeighbourhood.cpp  HypersphereNeighbourhood.h  IntEvaluationPerformance.cpp  IntEvaluationPerformance.h  IntParameter.cpp  IntParameter.h  LinearCombination.cpp  LinearCombination.h  Optimizer.h  ParameterFactory.cpp  ParameterFactory.h  Point.cpp  Point.h  Random.cpp  Random.h  Step.h  TEvaluationPerformance.h  TParameter.h  Timer.h
mwextractor/mwextractor/machine_learning/multilayer_perceptron/: Layer.cpp  Layer.h  Model.cpp  Model.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h  Neuron.cpp  Neuron.h
mwextractor/mwextractor/machine_learning/support_vector_machine/: SupportVectorMachine.cpp  SupportVectorMachine.h
mwextractor/mwextractor/program/: AbstractConfig.cpp  AbstractConfig.h
mwextractor/mwextractor/program/continger/: CMakeLists.txt  Config.cpp  Config.h  Continger.cpp  Continger.h  main.cpp
mwextractor/mwextractor/program/cover/: CMakeLists.txt  Config.cpp  Config.h  Cover.cpp  Cover.h  main.cpp
mwextractor/mwextractor/program/digger/: CMakeLists.txt  Config.cpp  Config.h  Digger.cpp  Digger.h  main.cpp
mwextractor/mwextractor/program/feature_maker/: CMakeLists.txt  Config.cpp  Config.h  FeatureMaker.cpp  FeatureMaker.h  main.cpp
mwextractor/mwextractor/program/heuristic/: CMakeLists.txt  Config.cpp  Config.h  Heuristic.cpp  Heuristic.h  main.cpp
mwextractor/mwextractor/program/indexer/: CMakeLists.txt  Config.cpp  Config.h  Indexer.cpp  Indexer.h  main.cpp
mwextractor/mwextractor/program/judger/: CMakeLists.txt  Config.cpp  Config.h  Judger.cpp  Judger.h  main.cpp
mwextractor/mwextractor/program/metatool/: CMakeLists.txt  Config.cpp  Config.h  ContingencyTableGeneratorManager.cpp  ContingencyTableGeneratorManager.h  DataManager.h  MatrixTupleStorageManager.cpp  MatrixTupleStorageManager.h  MetaTool.cpp  MetaTool.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  main.cpp
mwextractor/mwextractor/structure/: AbstractKBestStructure.h  FastSetStorage.h  IdManager.h  KBestElement.h  KBestElementList.h  MultisetKBestStructure.h  QueueKBestStructure.h  RelevantObjectSet.h
mwextractor/mwextractor/tests/: CMakeLists.txt  main.cpp
mwextractor/mwextractor/utils/: Debug.cpp  Debug.h  File.cpp  File.h  Math.h  Parallel.cpp  Parallel.h  Random.cpp  Random.h  Textual.cpp  Textual.h  Time.cpp  Time.h  Types.h
(+416 files in other folders)
